update(services.js): add image process on mobile version and fix dimension images

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1126,6 +1126,10 @@ input:checked + .slider:before {
   height: 100%;
 }
 
+.reduceMargin{
+  margin: 20px;
+}
+
 @media only screen and (max-width: 767px) {
   .footerLogo {
     width: 300px;
